something's going on

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/public/contact.css">
 </head>
 <body>
-    
+    <form method="post" action="/contact">
+
+    </form>
 </body>
 </html>
