--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -8,7 +8,9 @@
 </head>
 <body>
     <form method="post" action="/contact">
-
+        <input type ="email" name ="email">
+        <input type ="text" name ="name">
+        <button type="submit">Submit</button>
     </form>
 </body>
 </html>
