--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,13 +13,13 @@
             <div>
                 <ul class="list-container">
                     <li>
-                        <a href="">Home</a>
+                        <a href="/home">Home</a>
                     </li>
                     <li>
-                        <a href="">Contact Us</a>
+                        <a href="/contact">Contact Us</a>
                     </li>
                     <li>
-                        <a href="">Serivces</a>
+                        <a href="/services">Serivces</a>
                     </li>
                 </ul>
             </div>
