Done (ugliest project ever made lmao)

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,14 +9,14 @@
 <body>
     <div class="nav-container">
         <nav>
-            <h2>LOGO</h2>
+            <img src="../public/chess-logo2.png" width="80">
             <div>
                 <ul class="list-container">
                     <li>
                         <a href="/home">Home</a>
                     </li>
                     <li>
-                        <a href="/contact">Contact Us</a>
+                        <a href="/contact">Contact</a>
                     </li>
                     <li>
                         <a href="/services">Serivces</a>
@@ -25,6 +25,12 @@
             </div>
         </nav>
     </div>
-    <h1>Content I want!</h1>
+    <section>
+        <div class="paragraph-container">
+            <h1>Lorem, ipsum!</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque excepturi neque, facere magni ipsum, laborum eveniet autem corrupti, perferendis eos inventore possimus aspernatur nulla enim! Mollitia, ratione? Repellendus, esse alias!</p>
+        </div>
+        <img src="../public/chess.png" width="700">
+    </section>
 </body>
 </html>
