--- a/views/services.ejs
+++ b/views/services.ejs
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="/public/services.css">
 </head>
 <body>
-    kys
+    <div class="nav-container">
+        <nav>
+            <img src="../public/chess-logo2.png" width="80">
+            <div>
+                <ul class="list-container">
+                    <li>
+                        <a href="/home">Home</a>
+                    </li>
+                    <li>
+                        <a href="/contact">Contact</a>
+                    </li>
+                    <li>
+                        <a href="/services">Serivces</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <h1>Our Services:</h1>
+    <ol>
+        <li>We help you get better at chess</li>
+        <li>We help you beat magnus carlsen</li>
+    </ol>
 </body>
 </html>
