--- a/public/home.css
+++ b/public/home.css
@@ -1,8 +1,11 @@
+*{
+    margin: 0%;
+}
 body{
-    background-color: black;
+    background-color: white;
 }
 .nav-container{
-    background-color: beige;
+    background-color: rgb(161, 238, 162);
 }
 nav{
     width: 90%;
@@ -12,11 +15,9 @@ nav{
     align-items: center;
 }
 h1{
-    color: white;
+    color: black;
     font-size: 70px;
-    position: fixed;
-    top: 50%;
-    right: 50%;
+    margin: 0%;
 }
 nav h2{
     color: black;
@@ -28,4 +29,25 @@ nav h2{
 .list-container li{
     display: inline-block;
     color: black;
+}
+.list-container li a{
+    font-size: 25px;
+    color: black;
+    text-decoration: none;
+}
+section{
+    width: 70%;
+    margin-top: 100px !important;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.paragraph-container{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+.paragraph-container p{
+    font-size: 30px;
 }
