--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -7,10 +7,38 @@
     <link rel="stylesheet" href="/public/contact.css">
 </head>
 <body>
-    <form method="post" action="/contact">
-        <input type ="email" name ="email">
-        <input type ="text" name ="name">
-        <button type="submit">Submit</button>
-    </form>
+    <div class="nav-container">
+        <nav>
+            <img src="../public/chess-logo2.png" width="80">
+            <div>
+                <ul class="list-container">
+                    <li>
+                        <a href="/home">Home</a>
+                    </li>
+                    <li>
+                        <a href="/contact">Contact</a>
+                    </li>
+                    <li>
+                        <a href="/services">Serivces</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <div class="section-container">
+        <section>
+            <form method="post" action="/contact">
+                <div class="input-container">
+                    <label for="email">Email:</label>
+                    <input type ="email" name ="email">
+                </div>
+                <div class="input-container">
+                    <label for="name">Name:</label>
+                    <input type ="text" name ="name">
+                </div>
+                <button type="submit">Submit</button>
+            </form>
+        </section>
+    </div>
 </body>
 </html>
